[project]
name = "saascalc"
version = "1.2.0"
description = "SaaS metrics calculator — LTV, CAC, MRR, ARR, runway, churn"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
